kubernetes/apps/nzbget/01-nzbget-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget-service
  labels:
    app: nzbget
spec:
  ports:
  - port: 6789
    name: web
  selector:
    app: nzbget
