kubernetes/apps/nzbget/02-nzbget-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget-headless
  labels:
    app: nzbget
spec:
  ports:
  - port: 6789
    name: web
  clusterIP: None
  selector:
    app: nzbget
